# tcloc

./: Cargo.toml  README.md
crates/: buffer  term
src/: alloc_track.rs  app.rs  bench_report.rs  bitmap_font.rs  cli.rs  format.rs  lang.rs  main.rs  perf.rs  scanner.rs  tree.rs  treemap.rs  ui.rs  watcher.rs
