[package]
name = "tcloc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
font8x8 = "0.3.1"
hashbrown = "0.17.1"
ignore = "0.4.26"
memchr = "2.8.2"
memmap2 = "0.9.10"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
smelt-term = "0.3"
smelt-perf = "0.1.1"
